syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package log;

service Logger {
	rpc LogInfo (LogRequest) returns (LogResponse);
}

message LogRequest {
	string message = 1;
}

message LogResponse {
	bool isSaved = 1;
}